fixed favicon cropping

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,14 @@
 /* AppComponent's private CSS styles */
 h1 {
-  font-size: 1.2em;
+  font-size: 2.2em;
   color: #999;
+  margin-top: 10%;
   margin-bottom: 0;
 }
 h2 {
   font-size: 2em;
   margin-top: 0;
+  margin-bottom: 5%;
   padding-top: 0;
 }
 nav a {
